Finishes to set up numbers and reference numbers. Begins to work on auto-relogin on expired sessions
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1656 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -61,6 +61,7 @@ eng:
       login: 'Login'
       logout: 'Logout'
       register: 'Register a company'
+      #>relogin: 'Relogin'
     company:
       about: 'About Ekylibre'
       backups: 'Backups'
