Fixes the bug on deposit accountizing
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1658 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -31,6 +31,7 @@ arb:
       journal: 'الدفتر اليومي : {{name}} ({{code}})'
       journal_close: 'اغلاق {{name}}'
       journal_create: 'انشاء دفتر يومي جديد'
+      #>journal_entry: 'Journal entry: %{number}'
       journal_entry_create: 'اضافة سجل'
       #>journal_entry_line_create: 'Add a new entry line'
       #>journal_entry_update: 'Update journal entry: %{number}'
@@ -326,6 +327,7 @@ arb:
     accountancy_rights: 'حقوق المحاسبة'
     #>accounting_balance: 'Accounting balance'
     accounts: 'حسابات المحاسب المستخدمة'
+    #>accounts_to_load: 'Accounts to load'
     active: 'فعال'
     active_balance_sheet: 'رصيد دائر'
     active_current_sum: 'مجموع الموجودات المتداولة'
@@ -664,6 +666,7 @@ arb:
     listing_extract: 'قائمة الاستخراج'
     listing_mail: 'ارسال البريد الالكتروني'
     listings: 'استحراج البيانات'
+    #>load: 'Load'
     load_demo_data: 'تحميل البيانات التجريبية'
     locale: 'اللغة'
     localization: 'الموقع الجغرافي'
