--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -21,7 +21,7 @@ eng:
       cash_create: 'Add a new cash'
       #>cash_delete: 'Cash delete'
       cash_update: 'Update cash: %{name}'
-      cashes: 'Cash'
+      cashes: 'Cashes'
       document_print: 'Prints, exportations'
       draft_entry_lines: 'Draft'
       financial_year: 'Financial year %{code}'
@@ -36,7 +36,7 @@ eng:
       journal_close: 'Closing of %{name}'
       journal_create: 'Create new journal'
       #>journal_delete: 'Journal delete'
-      #>journal_entry: 'Journal entry'
+      journal_entry: 'Journal entry: %{number}'
       journal_entry_create: 'Add an entry'
       #>journal_entry_delete: 'Journal entry delete'
       journal_entry_line_create: 'Add a new entry line'
@@ -227,6 +227,7 @@ eng:
       #>sale_payment_delete: 'Sale payment delete'
       sale_payment_mode_create: 'Add a new sale payment mode'
       #>sale_payment_mode_delete: 'Sale payment mode delete'
+      #>sale_payment_mode_reflect: 'Sale payment mode reflect'
       sale_payment_mode_update: 'Edit the sale payment mode: %{name}'
       sale_payment_modes: 'Sale payment modes'
       sale_payment_part_create: 'Add a new sale payment: %{type} N°%{number}'
@@ -448,6 +449,7 @@ eng:
     accountancy_rights: 'Accountancy'
     accounting_balance: 'Accounting balance'
     accounts: 'Accounts'
+    accounts_to_load: 'Accounts to load'
     active: 'Active'
     active_balance_sheet: 'Active Bilance'
     active_current_sum: 'Total Financial Asset'
@@ -751,6 +753,7 @@ eng:
     listing_extract: 'Extract listing'
     listing_mail: 'Email a listing'
     listings: 'Listings'
+    load: 'Load'
     load_demo_data: 'Load demo data'
     locale: 'Language'
     localization: 'Localization'
@@ -1156,7 +1159,7 @@ eng:
     update_params: 'Update params'
     usage: 'Usage'
     use_renew: 'Select the journal to carry over'
-    used_accounts: 'used accounts only'
+    used_accounts: 'Used accounts only'
     user_update: 'Modifier les informations de l''utilisateur'
     username: 'Username'
     uses: 'Tools'
