--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -17,7 +17,7 @@ jpn:
       #>cash: '%{nature_label}: %{name}'
       #>cash_create: 'Add a new cash'
       #>cash_update: 'Update cash: %{name}'
-      #>cashes: 'Cash'
+      #>cashes: 'Cashes'
       #>document_print: 'Prints, exportations'
       #>draft_entry_lines: 'Draft'
       #>financial_year: 'Financial year %{code}'
@@ -30,6 +30,7 @@ jpn:
       #>journal: 'Journal: %{name} (%{code})'
       #>journal_close: 'Closing of %{name}'
       #>journal_create: 'Create new journal'
+      #>journal_entry: 'Journal entry: %{number}'
       #>journal_entry_create: 'Add an entry'
       #>journal_entry_line_create: 'Add a new entry line'
       #>journal_entry_update: 'Update journal entry: %{number}'
@@ -316,6 +317,7 @@ jpn:
     #>accountancy_rights: 'Accountancy'
     #>accounting_balance: 'Accounting balance'
     #>accounts: 'Accounts'
+    #>accounts_to_load: 'Accounts to load'
     #>active: 'Active'
     #>active_balance_sheet: 'Active Bilance'
     #>active_current_sum: 'Total Financial Asset'
@@ -619,6 +621,7 @@ jpn:
     #>listing_extract: 'Extract listing'
     #>listing_mail: 'Email a listing'
     #>listings: 'Listings'
+    #>load: 'Load'
     #>load_demo_data: 'Load demo data'
     locale: '言語'
     #>localization: 'Localization'
@@ -1025,7 +1028,7 @@ jpn:
     #>update_params: 'Update params'
     #>usage: 'Usage'
     #>use_renew: 'Select the journal to carry over'
-    #>used_accounts: 'used accounts only'
+    #>used_accounts: 'Used accounts only'
     #>user_update: 'Modifier les informations de l''utilisateur'
     username: 'ユーザー名'
     #>uses: 'Tools'
