--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -31,6 +31,7 @@ spa:
       journal: 'Periodico : %{name} (%{code})'
       journal_close: 'Cierre del %{name}'
       journal_create: 'Crear un nuevo periodico'
+      #>journal_entry: 'Journal entry: %{number}'
       journal_entry_create: 'Añadir nueva escritura'
       #>journal_entry_line_create: 'Add a new entry line'
       #>journal_entry_update: 'Update journal entry: %{number}'
@@ -323,6 +324,7 @@ spa:
     accountancy_rights: 'Derechos modulo contabilidad'
     #>accounting_balance: 'Accounting balance'
     accounts: 'Cuentos contables utilizados'
+    #>accounts_to_load: 'Accounts to load'
     #>active: 'Active'
     active_balance_sheet: 'Balance activo'
     active_current_sum: 'Total activos circulandos'
@@ -639,6 +641,7 @@ spa:
     listing_extract: 'Ejecutar la extracción'
     listing_mail: 'Enviar un correo electronico'
     listings: 'Extracciones de datos'
+    #>load: 'Load'
     load_demo_data: 'Cargar datos de prueba'
     locale: 'Idioma'
     localization: 'Localisación geografica'
