--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -361,8 +361,8 @@ jpn:
     #>bank_statements: 'Bank statements'
     #>banks_accounts: 'Banks accounts'
     #>base: 'Base'
-    #>bban: 'Bban'
-    #>bic: 'Bic'
+    #>bban: 'BBAN'
+    #>bic: 'BIC'
     #>boolean_value: 'Boolean value'
     #>born_on: 'Born on'
     #>building: 'Building'
@@ -582,8 +582,8 @@ jpn:
     #>has_downpayment: 'Has downpayment'
     #>hashed_password: 'Hashed password'
     #>hour_duration: 'Hour duration'
-    #>iban: 'Iban'
-    #>iban_label: 'Iban label'
+    #>iban: 'IBAN'
+    #>iban_label: 'IBAN'
     id: '唯一の番号'
     #>immobilizations_account_id: 'Immobilizations account'
     #>importance: 'Importance'
@@ -1202,7 +1202,7 @@ jpn:
         #>sales: 'Sales'
         #>various: 'Various operations'
     journal_entry:
-      #>record_cancel: 'Cancel of record %{number}: %{name}'
+      #>entry_cancel: 'Cancel of entry %{number}: %{name}'
     journal_record:
     listing_node:
       #>add_filter: ' Add a filter'
